# hackathon4.0

./: README.md  pyproject.toml  report.md  session_log.txt
src/healthcare/: crew.py  main.py
src/healthcare/config/: agents.yaml  tasks.yaml
src/healthcare/tools/: custom_tool.py
