[project]
name = "healthcare"
version = "0.1.0"
description = "healthcare using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
healthcare = "healthcare.main:run"
run_crew = "healthcare.main:run"
train = "healthcare.main:train"
replay = "healthcare.main:replay"
test = "healthcare.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
